# Harry_Potter_Api-Rust-Axum

./: Cargo.toml
migrations/: 20241219071159_create_characters.sql  20241219071430_add_character_manuall.sql
src/: data.rs  dummy_data.rs  main.rs
src/database/: mod.rs  my_sql.rs
src/handlers/: character_handler.rs  mod.rs
src/models/: character.rs
src/services/: character_service.rs  mod.rs
src/utils/: api_response.rs
