[package]
name = "harry_potter_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
http = "1.2.0"
http-serde = "=2.1.1"
once_cell = "1.20.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }


# src/
# ├── main.rs
# ├── data.rs
# ├── handlers/
# │   ├── mod.rs
# │   └── character_handler.rs
# ├── models/
# │   ├── mod.rs
# │   └── character.rs
# ├── services/
# │   ├── mod.rs
# │   └── character_service.rs
# ├── utils/
# │   ├── mod.rs
# │   └── api_response.rs
# Cargo.toml

