[package]
name = "harry_potter_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
http = "1.2.0"
http-serde = "=2.1.1"
once_cell = "1.20.2"
prkorm = "0.5.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "any",
    "tls-native-tls",
    "runtime-tokio",
    "mysql",
] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }


# Application-level tracing for Rust.
tracing = "0.1.41"

# Utilities for implementing and composing `tracing` subscribers.
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
